--- a/app/src/main/res/layout/activity_covid.xml
+++ b/app/src/main/res/layout/activity_covid.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/custom_button"
         android:backgroundTintMode="add"
         android:fontFamily="sans-serif"
-        android:text="Done"
+        android:text="Continue"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="400dp"
         android:gravity="center"
-        android:text="I'm sorry\nYour rays isn't healthy"
+        android:text="I'm sorry\nYour rays aren't healthy"
         android:textAlignment="center"
         android:textColor="#FF4F5A"
         android:textSize="20sp"
