--- a/app/src/main/res/layout/activity_covid.xml
+++ b/app/src/main/res/layout/activity_covid.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/custom_button"
         android:backgroundTintMode="add"
         android:fontFamily="sans-serif"
-        android:text="Continue"
+        android:text="@string/Continue"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="400dp"
         android:gravity="center"
-        android:text="I'm sorry\nYour rays aren't healthy"
+        android:text="@string/i_m_sorry_nyour_rays_aren_t_healthy"
         android:textAlignment="center"
         android:textColor="#FF4F5A"
         android:textSize="20sp"
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="You are infected with covid-19"
+        android:text="@string/you_are_infected_with_covid_19"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -87,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="We wish you good health"
+        android:text="@string/we_wish_you_good_health"
         android:textAlignment="center"
         android:textColor="#FF4F5A"
         android:textSize="20sp"
