--- a/app/src/main/res/layout/covid_screen.xml
+++ b/app/src/main/res/layout/covid_screen.xml
@@ -20,7 +20,7 @@
         android:gravity="center"
         android:text="TextView"
         android:textColor="@color/black"
-        android:textSize="32dp"
+        android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
